--- a/pages/publicBenefit/publicBenefit.wxml
+++ b/pages/publicBenefit/publicBenefit.wxml
@@ -1,25 +1,45 @@
-<view class="container volunteer">
+<view class="container">
+  <i-tabs current="{{ current }}" bindchange="handleChange">
+    <i-tab key="tab2" title="我围观"></i-tab>
+    <i-tab key="tab1" title="我参与"></i-tab>
+  </i-tabs>
   <view class="padding bg-main">
-    <navigator wx:for="{{eventList}}" wx:key="{{item.id}}" url='./publicBenefitDetail?id={{item.id}}'>
-      <view>
-        <view class='text-lg text-black' style="line-height: 2;">{{item.name}}</view>
-        <view style="margin: 30rpx 0 20rpx;">
-          <view class='cu-tag round' style="margin-bottom: 10rpx;">
-            {{item.start_time}} - {{item.end_time}}
+    <view hidden="{{ current == 'tab1'}}">
+      <navigator wx:for="{{eventList}}" wx:key="{{item.id}}" url='./publicBenefitDetail?id={{item.id}}'>
+        <view>
+          <view class='text-lg text-black' style="line-height: 2;">{{item.name}}</view>
+          <view style="margin: 30rpx 0 20rpx;">
+            <view class='cu-tag round'>
+              {{item.start_time}} - {{item.end_time}}
+            </view>
           </view>
-          <view class='cu-tag round' style="margin-bottom: 10rpx;">{{item.address}}</view>
-        </view>
-        <view class="overhidden">
-          <view class='fl user-info'>
-            <image class='cu-avatar round sm' src="{{item.avatar || defaultAvatar}}"></image>
-            <text>{{item.team_name}}</text>
-          </view>
-          <wxs src="../../utils/filter.wxs" module="filter"></wxs>
-          <view class='cu-tag fr {{filter.toActivityClass(item.status)}}'>
-            {{filter.toActivityStatus(item.status)}}
+          <view class="overhidden">
+            <wxs src="../../utils/filter.wxs" module="filter"></wxs>
+            <view class='cu-tag round fl'>{{item.address}}</view>
+            <view class='cu-tag fr {{filter.toActivityClass(item.status)}}'>
+              {{filter.toActivityStatus(item.status)}}
+            </view>
           </view>
         </view>
-      </view>
-    </navigator>
+      </navigator>
+    </view>
+    <view hidden="{{ current == 'tab2'}}">
+      <navigator wx:for="{{myEventList}}" wx:key="{{item.id}}" url='./publicBenefitDetail?id={{item.id}}'>
+        <view>
+          <view class='text-lg text-black' style="line-height: 2;">{{item.name}}</view>
+          <view style="margin: 30rpx 0 20rpx;">
+            <view class='cu-tag round'>
+              {{item.start_time}} - {{item.end_time}}
+            </view>
+          </view>
+          <view class="overhidden">
+            <view class='cu-tag round fl'>{{item.address}}</view>
+            <view class='cu-tag fr {{filter.toActivityClass(item.status)}}'>
+              {{filter.toActivityStatus(item.status)}}
+            </view>
+          </view>
+        </view>
+      </navigator>
+    </view>
   </view>
 </view>
