--- a/pages/volunteer/volunteer.wxml
+++ b/pages/volunteer/volunteer.wxml
@@ -4,48 +4,52 @@
     <i-tab key="tab1" title="我参与"></i-tab>
   </i-tabs>
   <view class="padding bg-main">
-    <navigator hidden="{{ current == 'tab1'}}" wx:for="{{activityList}}" wx:key="{{item.id}}" url='./activity?id={{item.id}}'>
-      <view class='activity-list'>
-        <view class='text-lg text-black' style="line-height: 2;">{{item.name}}</view>
-        <view style="margin: 30rpx 0 20rpx;">
-          <view class='cu-tag round' style="margin-bottom: 10rpx;">
-            {{item.start_time}} - {{item.end_time}}
+    <view hidden="{{ current == 'tab1'}}">
+      <navigator class="activity-nav" wx:for="{{activityList}}" wx:key="{{item.id}}" url='./activity?id={{item.id}}'>
+        <view class='activity-list'>
+          <view class='text-lg text-black' style="line-height: 2;">{{item.name}}</view>
+          <view style="margin: 30rpx 0 20rpx;">
+            <view class='cu-tag round' style="margin-bottom: 10rpx;">
+              {{item.start_time}} - {{item.end_time}}
+            </view>
+            <view class='cu-tag round' style="margin-bottom: 10rpx;">{{item.address}}</view>
           </view>
-          <view class='cu-tag round' style="margin-bottom: 10rpx;">{{item.address}}</view>
-        </view>
-        <view class="overhidden">
-          <view class='fl user-info'>
-            <image class='cu-avatar round sm' src="{{item.avatar || defaultAvatar}}"></image>
-            <text>{{item.team_name}}</text>
-          </view>
-          <wxs src="../../utils/filter.wxs" module="filter"></wxs>
-          <view class='cu-tag fr {{filter.toActivityClass(item.status)}}'>
-            {{filter.toActivityStatus(item.status)}}
-          </view>
-        </view>
-      </view>
-    </navigator>
-    <navigator hidden="{{ current == 'tab2'}}" wx:for="{{myActivityList}}" wx:key="{{item.id}}" url='./activity?id={{item.id}}'>
-      <view class='activity-list'>
-        <view class='text-lg text-black' style="line-height: 2;">{{item.name}}</view>
-        <view style="margin: 30rpx 0 20rpx;">
-          <view class='cu-tag round' style="margin-bottom: 10rpx;">
-            {{item.start_time}} - {{item.end_time}}
-          </view>
-          <view class='cu-tag round' style="margin-bottom: 10rpx;">{{item.address}}</view>
-        </view>
-        <view class="overhidden">
-          <view class='fl user-info'>
-            <image class='cu-avatar round sm' src="{{item.avatar || defaultAvatar}}"></image>
-            <text>{{item.team_name}}</text>
-          </view>
-          <wxs src="../../utils/filter.wxs" module="filter"></wxs>
-          <view class='cu-tag fr {{filter.toActivityClass(item.status)}}'>
-            {{filter.toActivityStatus(item.status)}}
+          <view class="overhidden">
+            <view class='fl user-info'>
+              <image class='cu-avatar round sm' src="{{item.avatar || defaultAvatar}}"></image>
+              <text>{{item.team_name}}</text>
+            </view>
+            <wxs src="../../utils/filter.wxs" module="filter"></wxs>
+            <view class='cu-tag fr {{filter.toActivityClass(item.status)}}'>
+              {{filter.toActivityStatus(item.status)}}
+            </view>
           </view>
         </view>
-      </view>
-    </navigator>
+      </navigator>
+    </view>
+    <view hidden="{{ current == 'tab2'}}">
+      <navigator class="cur-activity-nav" wx:for="{{myActivityList}}" wx:key="{{item.id}}" url='./activity?id={{item.id}}'>
+        <view class='activity-list'>
+          <view class='text-lg text-black' style="line-height: 2;">{{item.name}}</view>
+          <view style="margin: 30rpx 0 20rpx;">
+            <view class='cu-tag round' style="margin-bottom: 10rpx;">
+              {{item.start_time}} - {{item.end_time}}
+            </view>
+            <view class='cu-tag round' style="margin-bottom: 10rpx;">{{item.address}}</view>
+          </view>
+          <view class="overhidden">
+            <view class='fl user-info'>
+              <image class='cu-avatar round sm' src="{{item.avatar || defaultAvatar}}"></image>
+              <text>{{item.team_name}}</text>
+            </view>
+            <wxs src="../../utils/filter.wxs" module="filter"></wxs>
+            <view class='cu-tag fr {{filter.toActivityClass(item.status)}}'>
+              {{filter.toActivityStatus(item.status)}}
+            </view>
+          </view>
+        </view>
+      </navigator>
+    </view>
   </view>
   <button wx:if="{{isLeader}}" bindtap="toActivityStart" class="cu-btn bg-orange lg icon" style="position: fixed;bottom: 60rpx;right: 40rpx;">
     <text class="cuIcon-add" style="font-size: 38rpx;"></text>
