--- a/pages/volunteer/volunteer.wxss
+++ b/pages/volunteer/volunteer.wxss
@@ -1,7 +1,8 @@
 page {
   background: #f1f3f7;
 }
-navigator + navigator {
+.activity-nav + .activity-nav,
+.cur-activity-nav + .cur-activity-nav {
   margin-top: 20rpx;
 }
 navigator {
