--- a/utils/filter.wxs
+++ b/utils/filter.wxs
@@ -7,7 +7,7 @@ var joinStatus = function (value) {
     case 3:
       return '审核中';
     case 4:
-      return '审核通过';
+      return '已报名';
   }
 }
 var toJoinClass = function (value) {
@@ -39,6 +39,35 @@ var toActivityClass = function (value) {
     case 2:
       return 'bg-orange';
     case 3:
+      return 'bg-grey';
+  }
+}
+var toPublicStatus = function (value) {
+  switch (value) {
+    case 1:
+      return '招募中';
+    case 2:
+      return '报名截止';
+    case 3:
+      return '进行中';
+    case 4:
+      return '已完成';
+    case 5:
+      return '延期';
+    case 6:
+      return '已关闭';
+  }
+}
+var toPublicClass = function (value) {
+  switch (value) {
+    case 1: ;
+    return 'bg-green';
+    case 3: ;
+    case 5:
+      return 'bg-orange';
+    case 2: ;
+    case 4: ;
+    case 6:
       return 'bg-grey';
   }
 }
@@ -116,6 +145,8 @@ var toBottom = function (isLeader, status, user_id, userId) {
 module.exports = {
   toActivityStatus: toActivityStatus,
   toActivityClass: toActivityClass,
+  toPublicStatus: toPublicStatus,
+  toPublicClass: toPublicClass,
   signStatus: signStatus,
   orderStatus: orderStatus,
   toOrderClass: toOrderClass,
