--- a/pages/publicBenefit/publicBenefitDetail.wxml
+++ b/pages/publicBenefit/publicBenefitDetail.wxml
@@ -1,38 +1,37 @@
 <view class="container padding">
   <view class='text-bold text-xl text-black mb20'>{{eventInfo.name}}</view>
-  <view class='fr'>
-    <wxs src="../../utils/filter.wxs" module="filter"></wxs>
-    <view class='cu-tag {{filter.toJoinClass(eventInfo.join_status)}}'>{{filter.joinStatus(eventInfo.join_status)}}</view>
+  <view>
+    <view class='cu-tag fr {{eventInfo.join_status == 1 ? "bg-orange" : "bg-green"}}'>{{eventInfo.join_status == 1 ? '未报名' : '已报名'}}</view>
   </view>
   <view class='module-title'>[ 基本信息 ]</view>
   <view class='ul'>
     <view><text>活动地点</text>{{eventInfo.address}}</view>
-    <view><text>报名截止时间</text>{{eventInfo.max}}人</view>
+    <view><text>报名截止时间</text>{{eventInfo.check_time}}</view>
     <view><text>开始时间</text>{{eventInfo.start_time}}</view>
     <view><text>结束时间</text>{{eventInfo.end_time}}</view>
   </view>
   <view class='module-title'>[ 活动内容 ]</view>
-  <view class='ul'>
-    {{eventInfo.desc}}
-    <!-- <import src="/wxParse/wxParse.wxml" />
-    <template is="wxParse" data="{{wxParseData:article.nodes}}" /> -->
+  <view class='ul' style="line-height: 1.7;">
+    <!-- {{eventInfo.desc}} -->
+    <import src="/wxParse/wxParse.wxml" />
+    <template is="wxParse" data="{{wxParseData:article.nodes}}" />
   </view>
   <view class='module-title'>[ 我的活动状态 ]</view>
   <view class='ul'>
-    <view><text>报名状态</text>{{filter.joinStatus(eventInfo.join_status)}}</view>
-    <view><text>签到状态</text>{{filter.signStatus(eventInfo.sign_status)}}</view>
+    <view><text>报名状态</text>{{eventInfo.join_status == 1 ? '未报名' : '已报名'}}</view>
+    <view><text>签到状态</text>{{eventInfo.sign_status == 1 ? '未签到' : '已签到'}}</view>
     <!-- <view><text>新增活跃</text>{{eventInfo.amount}} / {{eventInfo.time}}</view> -->
   </view>
-  <view class='center mt20 padding' wx:if="{{eventInfo.join_status == 0 && volunteer_status == 0}}">
+  <!-- <view class='center mt20 padding' wx:if="{{volunteer_status == 0}}">
     <button class='cu-btn bg-orange round shadow w100' bindtap="signin">成为志愿者</button>
-  </view>
-  <view class='center mt20 padding' wx:if="{{eventInfo.join_status == 1 && eventInfo.status == 1}}">
+  </view> -->
+  <!-- <view class='center mt20 padding' wx:if="{{eventInfo.join_status == 1 && eventInfo.status == 1}}">
     <button class='cu-btn bg-orange round shadow w100' bindtap="apply">加入服务队</button>
-  </view>
-  <view class='center mt20 padding' wx:if="{{eventInfo.join_status == 2 && eventInfo.status == 1}}">
+  </view> -->
+  <view class='center mt20 padding' wx:if="{{eventInfo.join_status == 1 && eventInfo.status == 1}}">
     <button class='cu-btn bg-orange round shadow w100' bindtap="join">我要报名</button>
   </view>
-  <view class='center mt20 padding' wx:if="{{activity.join_status == 4 && activity.status == 2 && activity.sign_status == 1}}">
+  <view class='center mt20 padding' wx:if="{{activity.join_status == 2 && eventInfo.status == 3 && activity.sign_status == 1}}">
     <button class='cu-btn bg-orange round shadow w100' bindtap="sign">签到</button>
   </view>
 </view>
