--- a/app.wxss
+++ b/app.wxss
@@ -115,5 +115,24 @@ page {
 	padding: 0 20rpx;
 	font-size: 20rpx;
   height: 36rpx;
-  line-height: 36rpx;
+  line-height: 36rpx; 
+}
+.dialog-footer {
+  position: relative;
+  line-height: 80rpx;
+  min-height: 80rpx;
+  display: flex;
+  border-top: 1px solid #ddd;
+}
+
+.dialog-footer > button {
+  flex: 1;
+  background: #fff;
+  height: 80rpx;
+  line-height: 80rpx;
+  font-size: 32rpx;
+}
+.dialog-footer button::after {
+  border-radius: 0;
+  border: none;
 }
