--- a/pages/personal/info.wxml
+++ b/pages/personal/info.wxml
@@ -5,17 +5,20 @@
     <i-input value="{{ phone }}" name="phone" type="number" title="电话" placeholder="请输入联系电话" />
     <view class="i-cell i-input" style="border-bottom:1px solid #e9eaec;">
       <view class="i-cell-hd i-input-title">队伍类型</view>
-      <picker name="team_type_id" disabled="{{volunteer_status == 1}}" bindchange="bindTeamTypeChange" value="{{team_type_id}}" range="{{teamTypeList}}" range-key="name">
+      <picker name="team_type_id" disabled="{{volunteer_status == 2}}" bindchange="bindTeamTypeChange" value="{{team_type_id}}" range="{{teamTypeList}}" range-key="name">
         <view class="picker" wx:if="{{teamTypeList[team_type_id].name}}">{{teamTypeList[team_type_id].name}}</view>
         <view class="picker" wx:else>请选择队伍类型</view>
       </picker>
     </view>
     <view class="i-cell i-input" style="border-bottom:1px solid #e9eaec;">
       <view class="i-cell-hd i-input-title">队伍</view>
-      <picker name="team_id" disabled="{{volunteer_status == 1}}" bindchange="bindTeamChange" value="{{team_id}}" range="{{teamMulList}}" range-key="name">
+      <picker name="team_id" disabled="{{volunteer_status == 2}}" bindchange="bindTeamChange" value="{{team_id}}" range="{{teamMulList}}" range-key="name">
         <view class="picker" wx:if="{{teamMulList[team_id].name}}">{{teamMulList[team_id].name}}</view>
         <view class="picker" wx:else>请先选择类型再选择队伍</view>
       </picker>
+    </view>
+    <view class="text-red text-sm" style="padding: 2px 15px;">
+      说明：认证成功后无法修改队伍。
     </view>
     <i-input value="{{ company }}" name="company" title="单位" placeholder="请输入单位名称" />
     <view class="i-cell i-input" style="border-bottom:1px solid #e9eaec;">
