--- a/pages/civilizationMap/teamDetail.wxml
+++ b/pages/civilizationMap/teamDetail.wxml
@@ -18,7 +18,7 @@
       {{info.leader_name}}
     </view>
     <view>
-      <text><text style="letter-spacing: 14rpx;">副队</text>人</text>
+      <text><text style="letter-spacing: 14rpx;">副队</text>长</text>
       {{info.assistant_name}}
     </view>
     <view>
